--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
+							<!-- <article class="post featured">
 								<header class="major">
 									
 									<h2><a href= "/Todolist-app/index.html">First Project</a></h2>
@@ -58,7 +58,7 @@
 								<ul class="actions special">
 									<li><a href="/Todolist-app/index.html" class="button large">LIVE WEBSITE</a></li>
 								</ul>
-							</article>
+							</article> -->
 
 						<!-- Posts -->
 							<section class="posts">
@@ -68,7 +68,7 @@
 										<h2><a href="/easybank-landing-page-master/index.html">Easybank landing page</a></h2>
 									</header>
 									<a href="/easybank-landing-page-master/index.html" class="image fit"><img src="/easybanl-landing-img.png" alt="" /></a>
-									<p>`in this website I have only used HTML5 and CSS. It is a nicly orgnized and well layouted website that will make a good landing page for a bank.</p>
+									<p>.</p>
 									<ul class="actions special">
 										<li><a href="/easybank-landing-page-master/index.html" class="button">LIVE WEBSITE</a></li>
 									</ul>
@@ -80,7 +80,7 @@
 										<h2><a href="/Tic-tac-toe/index.html">TIC TAC TOE GAME</a></h2>
 									</header>
 									<a href="/Tic-tac-toe/index.html" class="image fit"><img src="/tic-tac-toe-img.png" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>.</p>
 									<ul class="actions special">
 										<li><a href="/Tic-tac-toe/index.html" class="button">LIVE WEBSITE</a></li>
 									</ul>
@@ -93,7 +93,7 @@
 										</a></h2>
 									</header>
 									<a href="/galleria-slideshow-site/galleria-slideshow-site/starter-code/index.html" class="image fit"><img src="/galleria-slideshow-site/galleria-slideshow-site/preview.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p></p>
 									<ul class="actions special">
 										<li><a href="/galleria-slideshow-site/galleria-slideshow-site/starter-code/index.html" class="button">LIVE WEBSITE</a></li>
 									</ul>
@@ -104,11 +104,24 @@
 										<h2><a href="/Password_Generator/index.html">Password_Generator</a></h2>
 									</header>
 									<a href="/Password_Generator/index.html" class="image fit"><img src="/passwordgen_img.png" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>.</p>
 									<ul class="actions special">
 										<li><a href="/Password_Generator/index.html" class="button">LIVE WEBSITE</a></li>
 									</ul>
 								</article>
+
+									<article class="post featured">
+								<header class="major">
+									
+									<h2><a href= "/Todolist-app/index.html">First Project</a></h2>
+									<p>										</p>
+								</header>
+								<a href= "/Todolist-app/index.html" class="image main"><img src="/Todolist-app/design/desktop-design-light.jpg" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="/Todolist-app/index.html" class="button large">LIVE WEBSITE</a></li>
+								</ul>
+							</article>
+
 								<!-- <article>
 									<header>
 										<span class="date">April 11, 2017</span>
