changes to galleria screen size project

--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/arnolfini-portrait.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/arnolfini-portrait.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -20,23 +20,30 @@
   
 </header>
 
-<div class="container">
+<div class="Arnolfini-Portrait">
+
+
 <div class="deawingimg1">
 <a href="./assets/arnolfini-portrait/hero-large.jpg"  data-title="arnolfini portrait" data-lightbox="arnolfini portrait"><img src="./assets/arnolfini-portrait/thumbnail.jpg" alt="arnolfini portrait" id="pic"></a> 
 </div>
+
+
+<div class="title">
+  <h1>  Arnolfini Portrait </h1>
+  
+    <h4>Jan van Eyck</h4>
+  </div>
+
+
 <div class="deawingimg2">
   <img src="./assets/arnolfini-portrait/artist.jpg" alt="Jan van Eyck" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1>  Arnolfini <br>  Portrait 
 
-  <h4>Jan van Eyck</h4>
-</div>
+
 
 <div class="number">1434</div>
-<p>
+<p class="paragraph">
 
   
   It is considered one of the most original and <br> complex paintings in Western art, 
@@ -49,15 +56,14 @@
 
 </p>
 
-</div>
+
 
 </div>
-<footer>
+<div class="footer">
   <h2>  Arnolfini Portrait</h2>
   
   <h4>Jan van Eyck</h4>
+</div>
 
-
-</footer>
 </body>
 </html>
