--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/guernica.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/guernica.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -20,23 +20,30 @@
   
 </header>
 
-<div class="container">
+<div class="Guernica">
+
+
 <div class="deawingimg1">
 <a href="./assets/guernica/hero-large.jpg"  data-title="Guernica" data-lightbox="Guernica"><img src="./assets/guernica/thumbnail.jpg" alt="Guernica" id="pic"></a> 
 </div>
+
+<div class="title">
+  <h1>  Guernica 
+  
+    <h4>Pablo Picasso</h4>
+  </div>
+
 <div class="deawingimg2">
   <img src="./assets/guernica/artist.jpg" alt="Pablo Picasso" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1>  Guernica 
 
-  <h4>Pablo Picasso</h4>
-</div>
+
 
 <div class="number">1937</div>
-<p>
+
+
+<p class="paragraph">
 
   
   The scene occurs within a room where, on the left, a wide-eyed bull stands over 
@@ -52,12 +59,12 @@
 </div>
 
 </div>
-<footer>
+<div class="footer">
   <h2>  Guernica</h2>
   <h4>Pablo Picasso</h4>
 
 
-</footer>
+</div>
 
 
 
