--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/lady-with-an-ermine.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/lady-with-an-ermine.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -20,23 +20,29 @@
   
 </header>
 
-<div class="container">
+<div class="Lady-withan-Ermine">
+
+
 <div class="deawingimg1">
 <a href="./assets/lady-with-an-ermine/hero-large.jpg"  data-title="Lady with an Ermine" data-lightbox="Lady with an Ermine"><img src="./assets/lady-with-an-ermine/thumbnail.jpg" alt="Lady with an Ermine" id="pic"></a> 
 </div>
+
+<div class="title">
+  <h1>  Lady with an Ermine </h1>
+  
+    <h4> Leonardo da Vinci</h4>
+  </div>
+
+
 <div class="deawingimg2">
   <img src="./assets/lady-with-an-ermine/artist.jpg" alt=" Leonardo da Vinci" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1>  Lady with <br> an Ermine 
 
-  <h4> Leonardo da Vinci</h4>
-</div>
+  
 
 <div class="number">1489</div>
-<p>
+<p class="paragraph">
   The Lady with an Ermine (Italian: Dama con<br> l'ermellino [ˈdaːma kon lermelˈliːno]; 
   Polish: Dama z gronostajem)<br> is a portrait painting widely attributed to the 
   Italian Renaissance<br> artist Leonardo da Vinci. Dated to c. 1489–1491, the work is<br> 
@@ -45,20 +51,15 @@
   the Sforza court at the<br> time of its execution. It is one of only four<br> surviving 
   portraits of women painted by <br>Leonardo, the others being Ginevra de' Benci,<br> La 
   Belle Ferronnière and the Mona Lisa.
-  
- 
-
 </p>
 
-</div>
+
 
 </div>
-<footer>
+<div class="footer">
   <h2>  Lady with an Ermine</h2>
   <h4>Leonardo da Vinci</h4>
-
-
-</footer>
+</div>
 
 
 
