--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/mona-lisa.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/mona-lisa.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -20,23 +20,33 @@
   
 </header>
 
-<div class="container">
+<div class="Mona-Lisa">
+
+
+  <div class="title">
+    <h1>   Mona Lisa</h1>
+    
+      <h4>Leonardo da Vinci</h4>
+    </div>
+
+    
 <div class="deawingimg1">
 <a href="./assets/mona-lisa/hero-large.jpg"  data-title="Mona Lisa" data-lightbox="Mona Lisa"><img src="./assets/mona-lisa/thumbnail.jpg" alt="Mona Lisa" id="pic"></a> 
 </div>
+
+
+
+  
 <div class="deawingimg2">
   <img src="./assets/mona-lisa/artist.jpg" alt="Leonardo da Vinci" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1>   Mona Lisa</h1>
 
-  <h4>Leonardo da Vinci</h4>
-</div>
 
 <div class="number">1503</div>
-<p>
+
+
+<p class="paragraph">
 
   The Mona Lisa (/ˌmoʊnə ˈliːsə/; italian: La <br> Gioconda [la dʒoˈkonda] or Monna 
   Lisa<br> [ˈmɔnna ˈliːza]) is a half-length portrait painting<br> by Italian artist 
@@ -50,15 +60,13 @@
 
 </p>
 
-</div>
+
 
 </div>
-<footer>
+<div class="footer">
   <h2>   Mona Lisa</h2>
   <h4>Leonardo da Vinci</h4>
-
-
-</footer>
+</div>
 
 
 
