--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/penitent-magdalene.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/penitent-magdalene.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -20,23 +20,31 @@
   
 </header>
 
-<div class="container">
+<div class="Penitent-Magdalene">
+
+
 <div class="deawingimg1">
 <a href="./assets/penitent-magdalene/hero-large.jpg"  data-title="Penitent Magdalene" data-lightbox="Penitent Magdalene"><img src="./assets/penitent-magdalene/thumbnail.jpg" alt="Penitent Magdalene" id="pic"></a> 
 </div>
+
+
+<div class="title">
+  <h1> Penitent <br>Magdalene </h1> 
+  
+    <h4>Artemisia Gentileschi</h4>
+  </div>
+
+
 <div class="deawingimg2">
   <img src="./assets/penitent-magdalene/artist.jpg" alt="Artemisia Gentileschi" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1> Penitent <br>Magdalene </h1> 
 
-  <h4>Artemisia Gentileschi</h4>
-</div>
 
 <div class="number">1625</div>
-<p  class="for-PenitentMagdalene ">
+
+
+<p  class="paragraph ">
 
   Penitent Magdalene is a painting by the Italian <br> artist Artemisia Gentileschi. 
   It hangs in Seville<br> Cathedral. It has probably been in the cathedral <br>since the 
@@ -47,15 +55,16 @@
 
 </p>
 
-</div>
+
 
 </div>
-<footer>
+<div class="footer">
+
   <h2>  Penitent Magdalene</h2>
   <h4>Artemisia Gentileschi</h4>
 
 
-</footer>
+</div>
 
 
 
