--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/the-basket-of-apples.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/the-basket-of-apples.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -20,23 +20,31 @@
   
 </header>
 
-<div class="container">
+<div class="The-Basketof-Apples">
+
+
 <div class="deawingimg1">
 <a href="./assets/the-basket-of-apples/hero-large.jpg"  data-title="The Basket of Apples" data-lightbox="The Basket of Apples"><img src="./assets/the-basket-of-apples/thumbnail.jpg" alt="The Basket of Apples" id="pic"></a> 
 </div>
+
+
+<div class="title">
+  <h1>   The Basket of Apples </h1> 
+  
+    <h4>Paul Cézanne</h4>
+  </div>
+
 <div class="deawingimg2">
   <img src="./assets/the-basket-of-apples/artist.jpg" alt="Paul Cézanne" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1>   The Basket  <br> of Apples </h1> 
 
-  <h4>Paul Cézanne</h4>
-</div>
+  
 
 <div class="number"> 1893</div>
-<p class="for-TheBasketofApples">
+
+
+<p class="paragraph">
 
   The Basket of Apples (French: Le panier de<br>  pommes) is a still life oil painting 
   by French<br>  artist Paul Cézanne, which he created c. 1893.<br>  The painting is 
@@ -48,15 +56,15 @@
 
 </p>
 
-</div>
+
 
 </div>
-<footer>
+
+
+<div class="footer">
   <h2>  The Basket of Apples</h2>
   <h4>Paul Cézanne</h4>
-
-
-</footer>
+</div>
  
 
  
