--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/the-boy-in-the-red-vest.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/the-boy-in-the-red-vest.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -20,23 +20,31 @@
   
 </header>
 
-<div class="container">
+<div class="The-BoyintheRed-Vest">
+
+
 <div class="deawingimg1">
 <a href="./assets/the-boy-in-the-red-vest/hero-large.jpg"  data-title="The Boy in the Red Vest" data-lightbox="The Boy in the Red Vest"><img src="./assets/the-boy-in-the-red-vest/thumbnail.jpg" alt="The Boy in the Red Vest" id="pic"></a> 
 </div>
+
+<div class="title">
+  <h1 class="for-TheBoyintheRedVest-h1"> The Boy in the Red Vest </h1> 
+  
+    <h4 class="for-TheBoyintheRedVest-h4">Paul Cézanne</h4>
+  </div>
+
+
 <div class="deawingimg2">
   <img src="./assets/the-boy-in-the-red-vest/artist.jpg" alt="Paul Cézanne" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1 class="for-TheBoyintheRedVest-h1"> The Boy in <br> the Red Vest </h1> 
 
-  <h4 class="for-TheBoyintheRedVest-h4">Paul Cézanne</h4>
-</div>
+
 
 <div class="number">1889</div>
-<p class="for-TheBoyintheRedVest">
+
+
+<p class="paragraph">
 
   
   Cézanne painted four oil portraits of this Italian boy in the red vest, all 
@@ -52,12 +60,10 @@
 </div>
 
 </div>
-<footer>
+<div class="footer">
   <h2>  The Boy in the Red Vest</h2>
   <h4> Paul Cézanne </h4>
-
-
-</footer>
+</div>
  
 
   
