--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/the-great-wave-off-kanagawa.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/the-great-wave-off-kanagawa.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -20,23 +20,31 @@
   
 </header>
 
-<div class="container">
+<div class="The-GreatWaveoff-Kanagawa">
+
+
 <div class="deawingimg1">
 <a href="./assets/the-great-wave-off-kanagawa/hero-large.jpg"  data-title="The Great Wave off Kanagawa " data-lightbox="The Great Wave off Kanagawa "><img src="./assets/the-great-wave-off-kanagawa/thumbnail.jpg" alt="The Great Wave off Kanagawa " id="pic"></a> 
 </div>
+
+
+<div class="title">
+  <h1>  The Great Wave off Kanagawa </h1> 
+  
+    <h4>Hokusai</h4>
+  </div>
+ 
+
 <div class="deawingimg2">
   <img src="./assets/the-great-wave-off-kanagawa/artist.jpg" alt="Hokusai" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1>  The Great Wave off Kanagawa </h1> 
 
-  <h4>Hokusai</h4>
-</div>
-
+ 
 <div class="number">  1831</div>
-<p class="for-TheGreatWaveoffKanagawa">
+
+
+<p class="paragraph">
 
   
   The Great Wave off Kanagawa (Japanese: 神奈川沖浪裏, Hepburn: Kanagawa-oki Nami 
@@ -49,16 +57,13 @@
 
 </p>
 
-</div>
+
 
 </div>
-<footer>
+<div class="footer">
   <h2>  The Great Wave off Kanagawa</h2>
   <h4> Hokusai</h4>
-
-
-</footer>
- 
+</div>
 
 
   
