--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/the-sleeping-gypsy.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/the-sleeping-gypsy.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -20,23 +20,31 @@
   
 </header>
 
-<div class="container">
+<div class="The-Sleeping-Gypsy">
+
+
 <div class="deawingimg1">
-<a href="./assets/the-sleeping-gypsy/hero-large.jpg"  data-title="Henri Rousseau" data-lightbox="Henri Rousseau "><img src="./assets/the-sleeping-gypsy/hero-large.jpg" alt="Henri Rousseau" id="pic"></a> 
+<a href="./assets/the-sleeping-gypsy/hero-large.jpg"  data-title="Henri Rousseau" data-lightbox="Henri Rousseau "><img src="./assets/the-sleeping-gypsy/thumbnail.jpg" alt="Henri Rousseau" id="pic"></a> 
 </div>
+
+<div class="title">
+  <h1> The Sleeping Gypsy </h1> 
+  
+    <h4> Henri Rousseau</h4>
+  </div>
+
+
 <div class="deawingimg2">
   <img src="./assets/the-sleeping-gypsy/artist.jpg" alt="Henri Rousseau" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1 class="for-TheSleepingGypsy "> Henri Rousseau </h1> 
 
-  <h4> Henri Rousseau</h4>
-</div>
+ 
 
 <div class="number"> 1897</div>
-<p class="for-TheSleepingGypsy">
+
+
+<p class="paragraph">
 
   
   The Sleeping Gypsy (French: La Bohémienne endormie) is an 1897 oil painting by 
@@ -49,15 +57,13 @@
 
 </p>
 
-</div>
+
 
 </div>
-<footer>
+<div class="footer">
   <h2>  The Sleeping Gypsy</h2>
   <h4>  Henri Rousseau</h4>
-
-
-</footer>
+</div>
 
 
 
