--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/van-gogh-self-portrait.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/van-gogh-self-portrait.html
@@ -4,8 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -19,23 +19,31 @@
   
 </header>
 
-<div class="container">
+<div class="Van-GoghSelf-portrait">
+
+
 <div class="deawingimg1">
 <a href="./assets/van-gogh-self-portrait/hero-large.jpg"  data-title="Vincent Van Gogh" data-lightbox="Vincent Van Gogh "><img src="./assets/van-gogh-self-portrait/thumbnail.jpg" alt="Vincent Van Gogh" id="pic"></a> 
 </div>
+
+<div class="title">
+  <h1 class="for-VanGoghSelf-portrait">  Van Gogh Self-portrait </h1> 
+  
+    <h4 class="for-VanGoghSelf-portrait-h4"> Vincent Van Gogh</h4>
+  </div>
+
+
 <div class="deawingimg2">
   <img src="./assets/van-gogh-self-portrait/artist.jpg" alt="Vincent Van Gogh" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1 class="for-VanGoghSelf-portrait">  Van Gogh Self-portrait </h1> 
 
-  <h4 class="for-VanGoghSelf-portrait-h4"> Vincent Van Gogh</h4>
-</div>
+
 
 <div class="number"> 1889</div>
-<p class="for-TheSleepingGypsy">
+
+
+<p class="paragraph">
 
   
   This self-portrait was one of about 32 produced over a 10-year period, and these 
@@ -49,15 +57,12 @@
 
 </p>
 
-</div>
 
 </div>
-<footer>
+<div class="footer">
   <h2>  Van Gogh Self-portrait</h2>
   <h4> Vincent Van Gogh </h4>
-
-
-</footer>
+</div>
 
   
   
