--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/girl-with-pearl-earring.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/girl-with-pearl-earring.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -20,23 +20,30 @@
   
 </header>
 
-<div class="container">
+<div class="Girl-withaPearl-Earring">
+
+
 <div class="deawingimg1">
 <a href="./assets/girl-with-pearl-earring/hero-large.jpg"  data-title="girl with pearl" data-lightbox="girl-with-pearl"><img src="./assets/girl-with-pearl-earring/thumbnail.jpg" alt="girl with pearl" id="pic"></a> 
 </div>
+
+
+<div class="title">
+  <h1>  Girl with a Pearl Earring</h1>
+  
+<h4>Johannes Vermeer</h4>
+
+</div>
+
 <div class="deawingimg2">
   <img src="./assets/girl-with-pearl-earring/artist.jpg" alt="Johannes Vermeer" id="JohannesVermeer-artist">
   </div>
 
-<div class="text">
-  <div class="title">
-<h1>  Girl with <br>  a Pearl <br> Earring</h1>
 
-  <h4>Johannes Vermeer</h4>
-</div>
 
 <div class="number">1665</div>
-<p>
+
+<p class="paragraph">
 
   The painting is a tronie, the Dutch 17th-century <br> description of a 'head' that was 
   not meant to be<br> a portrait. It depicts a European  girl wearing an <br>exotic dress, 
@@ -46,17 +53,17 @@
   of the specular reflection,<br>  the pear shape and the large size of the earring.
 
 </p>
-
+<!-- container end div -->
 </div>
 
-</div>
-<footer>
+
+<div class="footer">
   <h2>  Girl with a Pearl Earring</h2>
   
   <h4>Johannes Vermeer</h4>
 
+</div>
 
-</footer>
 
 </body>
 </html>
