--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/index.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/index.html
@@ -6,6 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css/>
   
   <title>Galleria slideshow </title>
 </head>
@@ -19,14 +20,15 @@
 </header>
 
 
-<div class="container">
+
+  <div class="container">
 
 
   <div class="starry_night" id="starry_night" >
     <div class="image_container" >
       <h2>Starry Night</h2>
       <h4>Vincent Van Gogh</h4>
-      <img  src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/starry-night/gallery.jpg" alt="Starry Night">
+      <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/starry-night/gallery.jpg" alt="Starry Night">
     </div>
   </div>
 
@@ -34,7 +36,7 @@
     <div class="image_container"> 
       <h2>Girl with a Pearl <br> Earring</h2>
       <h4>Johannes Vermeer</h4>
-      <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/girl-with-pearl-earring/gallery.jpg" alt="Girl with a Pearl">      
+      <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/girl-with-pearl-earring/gallery.jpg" alt="Girl with a Pearl">      
     </div>
   </div>
 
@@ -42,7 +44,7 @@
     <div class="image_container"> 
       <h2> Guernica</h2>
       <h4> Pablo Picasso</h4>
-      <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/guernica/gallery.jpg"  alt="Guernica">
+      <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/guernica/gallery.jpg" alt="Guernica">
     </div>
   </div>
 
@@ -51,7 +53,7 @@
     <div class="image_container"> 
       <h2>Penitent <br> Magdalene</h2>
       <h4> Artemisia Gentileschi</h4>
-      <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/penitent-magdalene/gallery.jpg"  alt="Penitent Magdalene">
+      <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/penitent-magdalene/gallery.jpg" alt="Penitent Magdalene">
     </div>
   </div>
 
@@ -59,7 +61,7 @@
     <div class="image_container"> 
       <h2> The Storm on the <br> Sea of Galilee</h2>
       <h4>Rembrandt</h4>
-      <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/the-storm-on-the-sea-of-galilee/gallery.jpg"  alt="The Stormon the Sea of Galilee">
+      <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/the-storm-on-the-sea-of-galilee/gallery.jpg" alt="The Stormon the Sea of Galilee">
     </div>
   </div>
 
@@ -68,7 +70,7 @@
     <div class="image_container"> 
       <h2>The Great Wave off <br> Kanagawa</h2>
       <h4>Hokusai</h4>
-      <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/the-great-wave-off-kanagawa/gallery.jpg"  alt="The Great Wave off Kanagawa">
+      <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/the-great-wave-off-kanagawa/gallery.jpg" alt="The Great Wave off Kanagawa">
     </div>
   </div>
 
@@ -77,7 +79,7 @@
     <div class="image_container"> 
       <h2>Van Gogh Self-portrait</h2>
       <h4>Vincent Van Gogh</h4>
-      <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/van-gogh-self-portrait/gallery.jpg"  alt="Van Gogh Self-portrait">
+      <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/van-gogh-self-portrait/gallery.jpg" alt="Van Gogh Self-portrait">
     </div>
   </div>
 
@@ -86,7 +88,7 @@
     <div class="image_container"> 
       <h2>The Sleeping Gypsy</h2>
       <h4>Henri Rousseau</h4>
-      <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/the-sleeping-gypsy/gallery.jpg"  alt="The Sleeping Gypsy">
+      <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/the-sleeping-gypsy/gallery.jpg" alt="The Sleeping Gypsy">
     </div>
   </div>
 
@@ -97,7 +99,7 @@
   <div class="image_container"> 
     <h2> Lady with an Ermine</h2>
     <h4>Leonardo da Vinci</h4>
-    <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/lady-with-an-ermine/gallery.jpg"  alt=" Lady with an Ermine">
+    <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/lady-with-an-ermine/gallery.jpg" alt=" Lady with an Ermine">
   </div>
 </div>
 
@@ -107,7 +109,7 @@
   <div class="image_container"> 
     <h2> The Night Café</h2>
     <h4>Vincent Van Gogh</h4>
-    <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/the-night-cafe/gallery.jpg"  alt="The Night Café">
+    <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/the-night-cafe/gallery.jpg" alt="The Night Café">
   </div>
 </div>
 
@@ -115,7 +117,7 @@
   <div class="image_container"> 
     <h2> Mona Lisa</h2>
     <h4>Vincent Van Gogh</h4>
-    <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/mona-lisa/gallery.jpg"  alt=" Mona Lisa">
+    <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/mona-lisa/gallery.jpg" alt=" Mona Lisa">
   </div>
 </div>
 
@@ -125,7 +127,7 @@
   <div class="image_container"> 
     <h2>The Basket of Apples Night</h2>
     <h4>Paul Cézanne</h4>
-    <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/the-basket-of-apples/gallery.jpg"  alt="The Basket of Apples">
+    <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/the-basket-of-apples/gallery.jpg" alt="The Basket of Apples">
   </div>
 </div>
 
@@ -140,7 +142,7 @@
   <div class="image_container"> 
     <h2> The Boy in the Red Vest</h2>
     <h4>Edward Hopper</h4>
-    <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/the-boy-in-the-red-vest/gallery.jpg"  alt=" The Boy in the Red Vest">
+    <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/the-boy-in-the-red-vest/gallery.jpg" alt=" The Boy in the Red Vest">
   </div>
 </div>
 
@@ -151,17 +153,23 @@
   <div class="image_container"> 
     <h2>Arnolfini Portrait</h2>
     <h4> Jan van Eyck</h4>
-    <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/arnolfini-portrait/gallery.jpg"  alt="Arnolfini Portrait">
+    <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/arnolfini-portrait/gallery.jpg" alt="Arnolfini Portrait">
   </div>
 </div>
-</div>
+
 <div class=" TheSwing" id="TheSwing">
   <div class="image_container"> 
     <h2> The Swing</h2>
     <h4>Jean-Honoré Fragonard </h4>
-    <img src="/galleria-slideshow-site/galleria-slideshow-site/starter-code/assets/the-swing/gallery.jpg"  alt=" The Swing">
+    <img class="imgs" src="/galleria-slideshow-site/starter-code/assets/the-swing/gallery.jpg" alt=" The Swing">
   </div>
 </div>
+<!-- End of container div -->
+</div>
+
+
+
+
 <script src="index.js"> </script>
 </body>
 </html>
