--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/starry-night.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/starry-night.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/> -->
   <link rel="stylesheet" href="girlwp.css">
   
   <title>Galleria slideshow site</title>
@@ -20,23 +20,29 @@
   
 </header>
 
-<div class="container">
+<div class="Starry-Night">
 <div class="deawingimg1">
 <a href="./assets/starry-night/hero-large.jpg"  data-title="Starry Night" data-lightbox="Starry Night"><img src="./assets/starry-night/thumbnail.jpg" alt="Starry Night" id="pic"></a> 
 </div>
+
+<div class="title">
+  <h1>  Starry Night </h1> 
+  
+    <h4>Vincent Van Gogh</h4>
+</div>
+
+
 <div class="deawingimg2">
   <img src="./assets/starry-night/artist.jpg" alt="Vincent Van Gogh" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1>  Starry <br> Night </h1> 
 
-  <h4>Vincent Van Gogh</h4>
-</div>
+
 
 <div class="number">1889</div>
-<p class="for-StarryNight">
+
+
+<p class="paragraph">
 
   
   Although The Starry Night was painted during <br> the day in Van Gogh's ground-floor 
@@ -49,15 +55,13 @@
 
 </p>
 
-</div>
+
 
 </div>
-<footer>
+<div class="footer">
   <h2>  Starry Night</h2>
-  <h4>Vincent Van Gogh</h4>
-
-
-</footer>
+  <h4>Vincent Van Gogh </h4>
+</div>
 
   
 
