--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/the-storm-on-the-sea-of-galilee.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/the-storm-on-the-sea-of-galilee.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -20,23 +20,31 @@
   
 </header>
 
-<div class="container">
+<div class="The-StormontheSeaof-Galilee">
+
+
 <div class="deawingimg1">
 <a href="./assets/the-storm-on-the-sea-of-galilee/hero-large.jpg"  data-title="The Storm on the Sea of Galilee" data-lightbox="The Storm on the Sea of Galilee "><img src="./assets/the-storm-on-the-sea-of-galilee/thumbnail.jpg" alt="Rembrandt" id="pic"></a> 
 </div>
+
+
+<div class="title">
+  <h1 class="for-TheStormontheSeaofGalilee-h1 "> The Storm on the Sea of Galilee </h1> 
+  
+    <h4>Rembrandt</h4>
+  </div>
+
+
 <div class="deawingimg2">
   <img src="./assets/the-storm-on-the-sea-of-galilee/artist.jpg" alt="Rembrandt" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1 class="for-TheStormontheSeaofGalilee-h1 "> The Storm on the Sea of Galilee </h1> 
 
-  <h4>Rembrandt</h4>
-</div>
+
 
 <div class="number"> 1633</div>
-<p class="for-TheStormontheSeaofGalilee">
+
+<p class="paragraph">
   The painting, in vertical format, shows a close-up view of Christ's disciples 
   struggling frantically against the heavy storm to regain control of their fishing 
   boat. A huge wave beats the bow and rips the sail. One of the disciples is seen 
@@ -44,15 +52,15 @@
   self-portrait of the artist. Only Christ, depicted on the right, remains calm.
   </p>
 
-</div>
+
 
 </div>
-<footer>
+<div class="footer">
   <h2>  The Storm on the Sea of Galilee</h2>
   <h4>   Rembrandt</h4>
 
 
-</footer>
+</div>
 
 <!--Go to source  URL: https://en.wikipedia.org/wiki/The_Storm_on_the_Sea_of_Galilee -->
 </body>
