--- a/galleria-slideshow-site/galleria-slideshow-site/starter-code/the-swing.html
+++ b/galleria-slideshow-site/galleria-slideshow-site/starter-code/the-swing.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="/galleria-slideshow-site/galleria-slideshow-site/lightbox.min.css">
-  <script src="/galleria-slideshow-site/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
+  <link rel="stylesheet" href="/galleria-slideshow-site/lightbox.min.css">
+  <script src="/galleria-slideshow-site/lightbox-plus-jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"/>
   <link rel="stylesheet" href="girlwp.css">
   
@@ -20,25 +20,30 @@
   
 </header>
 
-<div class="container">
+<div class="The-Swing">
+
+
 <div class="deawingimg1">
 <a href="./assets/the-swing/hero-large.jpg"  data-title="The Swing " data-lightbox="The Swing  "><img src="./assets/the-swing/thumbnail.jpg" alt="The Swing " id="pic"></a> 
 </div>
+
+<div class="title">
+  <h1 class="for-TheSwing"> The Swing </h1> 
+  
+    <h4> Jean-Honoré Fragonard</h4>
+  </div>
+
+  
 <div class="deawingimg2">
   <img src="./assets/the-swing/artist.jpg" alt="Jean-Honoré Fragonard" >
   </div>
 
-<div class="text">
-  <div class="title">
-<h1 class="for-TheSwing  "> The Swing </h1> 
-
-  <h4> Jean-Honoré Fragonard</h4>
-</div>
-
-<div class="number"> 1767</div>
-<p class="for-TheSleepingGypsy">
 
   
+<div class="number"> 1767</div>
+
+<p class="paragraph">
+   
   The painting depicts an elegant young woman on a swing. A smiling young man, 
   hiding in the bushes on the left, watches her from a vantage point that allows 
   him to see up into her billowing dress, where his arm is pointed with hat in 
@@ -50,14 +55,10 @@
 </p>
 
 </div>
-
-</div>
-<footer>
+<div class="footer">
   <h2>The Swing</h2>
   <h4> Jean-Honoré Fragonard</h4>
-
-
-</footer>
+</div>
 
  
 
